# READY.

./: README.md  READY..py  config.py  constants.py  pyc64.py  pyproject.toml  requirements-dev.txt  requirements.txt  utils.py
.github/workflows/: python-app.yml
benchmarks/: cpu.py  integrations.py  memory.py  timing.py
compilers/: README.md
hardware/: __init__.py  cia.py  constants.py  cpu.py  disk_drive.py  machine.py  memory.py  monitor.py  roms.py  screen.py  utils.py
libs/: parser.py
libs/hardware/: __init__.py  bus.py  cia.py  constants.py  cpu.py  disk_drive.py  machine.py  memory.py  monitor.py  screen.py
multiprocessing/: shared_mem.py
programs/: color_bars.asm  color_bars2.asm  test1.asm  test2.asm  test_ABS_XY.asm  test_ABS_XY_ZP.asm  test_ADC.asm  test_ASL_RSL.asm  test_INC_DEC.asm  test_IND.asm  test_IND_XY.asm  test_JSR.asm  test_ST.asm  test_bit.asm  test_stack.asm
roms/: README.md
tests/: test_bus.py  test_cia.py  test_cpu.py  test_drive.py  test_machine.py  test_memory.py  test_monitor.py  test_screen.py  testimage.d64
tests/roms/: basic  chargen  kernal
