[project]
name = "READY."
requires-python = ">= 3.8"
keywords = ["C64", "C=64", "Commodore", "emulator"]

[tool.ruff]
exclude = [
    ".git",
    ".github",
    "build",
    "dist",
    "site-packages",
    "venv",
]

line-length = 88
indent-width = 4
target-version = "py38"

[tool.ruff.lint]
select = [
    "E4", "E7", "E9", # pycodestyle
    "F", # pyflake
    "I", # isort
    # "SIM",  # simplify
    # "B",  # bugbear
    # "C4" # comprehensions
    # "PT"  # pytest
]
ignore = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
